# xtensor-interfaces

./: CMakeLists.txt
cmake/: xtensor-interfacesConfig.cmake
include/xti/: cereal.h  eigen.h  exception.h  opencv.h  typedefs.h  util.h
include/xti/adapt/: closure.h  functor.h  span.h
test/: CMakeLists.txt  cereal.cpp  eigen.cpp  opencv.cpp
